Finished compare tab, fixed graphing overlap

--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@ body {
     width: fit-content;
     display: flex;
     justify-content: space-around;
-    margin-bottom: 10vh;
     margin-left: 34vh;
     margin-top: -98.25vh;
     position: relative;
@@ -665,6 +664,129 @@ h2 {
     border-radius: 0.75vh;
 }
 
+#compare-header-container {
+    width: 80vh;
+    height: 10vh;
+    top: 25vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #333333;
+    color: white;
+    font-size: 4vh;
+}
+
+.stat-compare-container {
+    background-color:#333333;
+    width: 95%;
+    height: 5vh;
+    margin-top: 1vh;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-radius: 1vh;
+    transition: background-color 0.15s;
+}
+
+.compare-team-select {
+    width: 20vh !important;
+}
+
+.compare-stat-number {
+    color: white;
+    width: 10vh !important;
+    font-size: 3vh;
+    text-align: center;
+    transition: color 0.25s, font-weight 0.25s, text-shadow 0.25s;
+}
+
+.compare-stat-description {
+    position: relative;
+    color: white;
+    z-index: 100;
+    font-size: 2.5vh;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #1717174d;
+    padding: 0.5vh;
+    margin-top: -0.5vh;
+    transition: opacity 0.15s;
+}
+
+.compare-line-container {
+    width: 70%;
+    height: 2vh;
+    background-color: rebeccapurple;
+    border-radius: 1000000px;
+    color: white;
+    text-align: center;
+    font-size: 2vh;
+    text-shadow: #000000 0px 0px 1vh;
+    line-height: 2vh;
+    position: absolute;
+    margin-left: 12.5%;
+}
+
+.stat-compare-container:hover {
+    background-color: #171717;
+    cursor: pointer;
+}
+
+.stat-compare-container:hover .compare-stat-description {
+    opacity: 0;
+}
+
+.compare-inner-line {
+    width: 10vh;
+    height: 100%;
+    background-color: orangered;
+    position: absolute;
+    top: 0;
+    border-radius: 1000000px;
+    transition: width 0.25s;
+}
+
+#compare-container {
+    width: 80vh;
+    height: fit-content;
+    top: 25vh;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    flex-direction: column-reverse;
+}
+
+.compare-pulse-0 {
+    background: linear-gradient(-90deg, rgb(255, 116, 2) 0%, rgb(223, 3, 3) 7.5vh);
+    background-size: 400% 400%;
+    animation: compare-pulse-backwards 3s infinite;
+}
+
+.compare-pulse-1 {
+    background: linear-gradient(90deg, rgb(255, 199, 157) 0%, rgb(223, 183, 3) 7.5vh);
+    background-size: 400% 400%;
+    animation: compare-pulse 3s infinite ease-in;
+}
+
+#match-field {
+    background-color:#444444;
+    max-width: calc(90vw - 30vh);
+    width: 100vw;
+    height: 30vw;
+    max-height: 100vh;
+    border: 0.5vh solid #797979;
+    margin-top: 10vh;
+    position: absolute;
+    left: 0vh;
+}
+
+#match-select {
+    position: absolute;
+    left: 0vh;
+    width: 25vh;
+}
+
 #team-overall-select {
     width: 30vh;
     height: 8vh;
@@ -924,7 +1046,7 @@ h9 {
 .inner-breakdown-line {
     content: "";
     position: absolute;
-    background: linear-gradient(180deg, rgb(255, 211, 174) 0%, rgb(223, 29, 3) 7.5vh);
+    background: linear-gradient(180deg, rgb(255, 183, 124) 0%, rgb(223, 29, 3) 7.5vh);
     width: 2vh;
     height: 50%;
     left: 0;
@@ -970,6 +1092,26 @@ h9 {
 
     100% {
         background-position: 0% 225%;
+    }
+}
+
+@keyframes compare-pulse {
+    0% {
+        background-position: 100% 0%;
+    }
+
+    100% {
+        background-position: 225% 0%;
+    }
+}
+
+@keyframes compare-pulse-backwards {
+    0% {
+        background-position: 135% 0%;
+    }
+
+    100% {
+        background-position: 90% 0%;
     }
 }
 
@@ -1062,7 +1204,7 @@ h6 {
     flex-direction: row;
     height: fit-content;
     flex-direction: row;
-    margin-top: -5vh;
+    margin-top: 5vh;
 }
 
 #graph-left-legend {
